--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -55,5 +55,15 @@
         android:layout_alignParentLeft="true"
         android:text="@string/saldoBilhete"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+    
+    <TextView
+        android:id="@+id/txtValorSaldoBilhete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_toRightOf="@+id/txtSaldoBilhete"
+        android:gravity="right"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
