--- a/res/layout/historico_list_group.xml
+++ b/res/layout/historico_list_group.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="25dp"
-        android:text="@string/sem_texto" />
+        android:text="@string/sem_texto" 
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
