--- a/res/layout/alert_dialog_text_entry.xml
+++ b/res/layout/alert_dialog_text_entry.xml
@@ -4,6 +4,24 @@
     android:orientation="vertical">
 
     <TextView 
+        android:id="@+id/txtTipo"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="20dip"
+        android:layout_marginRight="20dip"
+        android:text="@string/tipo"
+        android:gravity="left"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+    <Spinner
+        android:id="@+id/comboTipo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dip"
+        android:layout_marginRight="20dip"
+        android:gravity="fill_horizontal" />
+    
+    <TextView 
         android:id="@+id/txtSaldo"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
